# ClassyRanger

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
src/: BaseClassifier.cpp  BaseClassifier.h  Corpus.h  CountVectorizer.cpp  CountVectorizer.h
src/classifiers/: NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  SimpleClassifier.cpp  SimpleClassifier.h
